--- a/Uebung03-1/index.css
+++ b/Uebung03-1/index.css
@@ -1,14 +1,58 @@
 @charset "UTF-8";
-div.person {
-  background-color: 💿;
-  -webkit-box-shadow: 🌑;
-          box-shadow: 🌑;
-  margin-left: 20%;
-  margin-right: 20%;
-  margin-bottom: 20%;
+body {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.container .wrapper {
+  width: 50%;
 }
 
 img {
+  max-width: 100%;
+}
+
+.person {
+  border: 🌑;
+  border-radius: 4px;
+  background-color: #e4e4e4;
+  -webkit-box-shadow: #bebebe 1px 1px;
+          box-shadow: #bebebe 1px 1px;
+}
+
+.person .image {
+  padding: 10px;
+}
+
+.person .image img {
   border-radius: 50%;
+  width: 100%;
+}
+
+.person .text {
+  text-align: center;
+  padding: 20px 10px;
+}
+
+.person .link {
+  padding: 20px 10px;
+  text-align: center;
+}
+
+.person .link a.button {
+  display: block;
+  background-color: blue;
+  text-align: center;
+  color: black;
+  text-decoration: none;
+  padding: 10px;
+  margin-bottom: 7px;
 }
 /*# sourceMappingURL=index.css.map */
