--- a/Uebung03-1/index.scss
+++ b/Uebung03-1/index.scss
@@ -1,31 +1,55 @@
-$💿: rgb(199, 199, 199);
-$🌑: #777279;
-$🚗: auto;
+$💙: blue;
+$🌑: 1px solid grey;
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
+body{
+    font-family: 'Roboto Condensed', sans-serif;
+}
 
-    .wrapper {
-        width: 50%;
+.container{
+    display:flex;
+    flex-wrap:wrap;
+
+    .wrapper{
+        width:50%;
     }
 }
 
-img {
+img{
     max-width: 100%;
 }
 
-.person {
-    border: 1px solid grey;
+.person{
+    border:🌑;
     border-radius: 4px;
-    background-color: 💿;
-    box-shadow: 💿 1px 1px;
+    background-color: rgb(228, 228, 228);
+    box-shadow: rgb(190, 190, 190) 1px 1px;
 
-    .image {
+    .image{
         padding: 10px;
 
         img {
-            border-radius: 50%;
+            border-radius:50%;
+            width:100%;
+        }
+    }
+
+    .text{
+        text-align: center;
+        padding: 20px 10px;
+    }
+
+    .link{
+        padding: 20px 10px;
+        text-align: center;
+
+        a.button {
+            display: block;
+            background-color: $💙;
+            text-align: center;
+            color: black;
+            text-decoration: none;
+            padding:10px;
+            margin-bottom: 7px;
         }
     }
 }
